@@ -76,6 +76,7 @@ class TestConventions {
     test.jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED",
             "--add-opens=java.base/java.util=ALL-UNNAMED",
             "--add-opens=java.base/java.net=ALL-UNNAMED",
+            "--enable-native-access=ALL-UNNAMED",
             "-Xshare:off");
 
   }
